working API for new game and get game
